--- a/src/static/index.html
+++ b/src/static/index.html
@@ -46,5 +46,51 @@
     </footer>
 
     <script src="app.js"></script>
+    <script>
+      // Render activities with participants section
+      function renderActivities(activities) {
+        const activitiesList = document.getElementById('activities-list');
+        activitiesList.innerHTML = '';
+        Object.entries(activities).forEach(([name, info]) => {
+          const card = document.createElement('div');
+          card.className = 'activity-card';
+          card.innerHTML = `
+            <h4>${name}</h4>
+            <p><strong>Description:</strong> ${info.description}</p>
+            <p><strong>Schedule:</strong> ${info.schedule}</p>
+            <p><strong>Max Participants:</strong> ${info.max_participants}</p>
+            <div class="participants-section">
+              <strong>Participants:</strong>
+              <ul class="participants-list">
+                ${info.participants && info.participants.length > 0
+                  ? info.participants.map(p => `<li>${p}</li>`).join('')
+                  : '<li class="no-participants">No participants yet</li>'}
+              </ul>
+            </div>
+          `;
+          activitiesList.appendChild(card);
+        });
+      }
+      // Fetch and render activities on page load
+      window.fetchActivities = function() {
+        fetch('/activities')
+          .then(res => res.json())
+          .then(data => {
+            renderActivities(data);
+            // ...existing code for select options...
+            const activitySelect = document.getElementById('activity');
+            activitySelect.innerHTML = '<option value="">-- Select an activity --</option>';
+            Object.keys(data).forEach(name => {
+              const option = document.createElement('option');
+              option.value = name;
+              option.textContent = name;
+              activitySelect.appendChild(option);
+            });
+          });
+      };
+      window.addEventListener('DOMContentLoaded', () => {
+        fetchActivities();
+      });
+    </script>
   </body>
 </html>
