Update activity card to display schedule and availability without description emphasis

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -57,7 +57,7 @@
           card.className = 'activity-card';
           card.innerHTML = `
             <h4>${name}</h4>
-            <p><strong>Description:</strong> ${info.description}</p>
+            <p>${info.description}</p>
             <p><strong>Schedule:</strong> ${info.schedule}</p>
             <p><strong>Availability:</strong> ${spotsLeft} spot${spotsLeft === 1 ? '' : 's'} left</p>
             <div class="participants-section">
